<resources>
    <string name="app_name">Emoji Memory Game</string>
    <string name="player_name">Player Name</string>
    <string name="player_age">Player Age</string>
    <string name="button_enter">Enter</string>
    <string name="min_date">01/01/1970</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="select_level">Select Your Level</string>
    <string name="welcome_player">Welcome Player</string>
    <string name="age_player">Your age is: 0</string>
    <string name="birthday_note">It\'s Your Birthday\nHappy Birthday!!!</string>
    <string name="time">Time left: </string>
    <string name="timer">0</string>
    <string name="score_place_title">Place</string>
    <string name="score_name_title">Name</string>
    <string name="score_location_title">Location</string>
    <string name="score_time_title">Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_records_table">Records</string>
    <string name="button_pressed">pressedButton</string>
    <string name="google_maps_api_key">AIzaSyDITY6j0ltYOs3ZZm5fabsDcX-x4ZtLELY</string>

    <string name="player_name_key">player name</string>
    <string name="player_age_key">player age</string>
    <string name="player_birthday_key">player birthday</string>
    <string name="player_level_key">player level</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
