<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_table"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    tools:context=".RecordsFragment">

    <RadioGroup
        android:id="@+id/radio_group_level_Table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/table_radio_button_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.25"
            android:buttonTint="@android:color/holo_green_light"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/easy_level"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/table_radio_button_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.25"
            android:buttonTint="@android:color/holo_orange_dark"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/medium_level"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/table_radio_button_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.25"
            android:buttonTint="@android:color/holo_red_dark"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/hard_level"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:layout_weight="0.25"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="X" />

    </RadioGroup>

    <TableLayout
        android:id="@+id/table_record_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="#000000">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="0.2"
            android:gravity="center">

            <TextView
                android:gravity="center|left"
                android:paddingRight="25dip"
                android:text="@string/score_place_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#f5bb89"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="center|left"
                android:paddingLeft="12.5dip"
                android:paddingRight="12.5dp"
                android:text="@string/score_name_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#f5bb89"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:paddingLeft="12.5dip"
                android:paddingRight="12.5dp"
                android:text="@string/score_location_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#f5bb89"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="right"
                android:paddingLeft="20dip"
                android:text="@string/score_time_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#f5bb89"
                android:textSize="15dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/table_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:background="#00000000"
        android:visibility="gone"></TableLayout>

    <ProgressBar
        android:id="@+id/progress_bar_table"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp" />
</FrameLayout>