<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_gradients">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_container"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:clickable="true">
            </RelativeLayout>

            <ImageView
                android:id="@+id/image_view_main_screen"
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_below="@+id/fragment_container"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:src="@drawable/welcome" />

            <EditText
                android:id="@+id/edit_text_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_main_screen"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_emoji_white"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/player_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                android:layout_below="@id/edit_text_player_name"/>


            <Button
                android:id="@+id/button_player_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_player_name"
                android:layout_marginTop="2dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableLeft="@drawable/icon_emoji_white"
                android:drawablePadding="12dp"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/player_age"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#f9d7db"
                android:layout_below="@id/button_player_age"/>


            <Button
                android:id="@+id/button_enter_main_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_player_age"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/button_enter"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_enter_main_screen"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:padding="16dp"
                android:text="MAP"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_record_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_below="@id/button_map"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/button_records_table"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>